[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pysqoop"
dynamic = ["version"]
authors = [
    {name = "Luca Fontanili", email = "luca.fontanili93@gmail.com"},
]
description = "A simple package to let you Sqoop into HDFS/Hive/HBase with python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["sqoop", "hadoop", "hdfs", "hive", "hbase", "data", "etl"]
dependencies = []

[project.urls]
Homepage = "https://github.com/lucafon/pysqoop"
Repository = "https://github.com/lucafon/pysqoop.git"
Issues = "https://github.com/lucafon/pysqoop/issues"

[tool.setuptools]
packages = ["pysqoop"]

[tool.setuptools.package-dir]
"" = "."

[tool.setuptools.dynamic]
version = {attr = "pysqoop.__version__"}

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=22.0",
    "isort>=5.0",
    "flake8>=4.0",
    "bandit>=1.7",
    "safety>=2.0",
    "python-semantic-release>=8.0.0",
]

[tool.black]
line-length = 120
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".eggs",
    "*.egg-info",
]

[tool.bandit]
exclude_dirs = ["tests", "unittests"]
skips = ["B101"]  # Skip assert_used test

[tool.semantic_release]
version_variables = ["pysqoop/__init__.py:__version__"]
build_command = "python -m pip install build && python -m build"
dist_path = "dist/"
upload_to_pypi = false
upload_to_vcs_release = true
remove_dist = false
branch = "master"
hvcs = "github"
commit_message = "{version}\n\nAutomatically generated by python-semantic-release"